--- a/contact.html
+++ b/contact.html
@@ -41,14 +41,14 @@
                     <i class="fas fa-map-marker-alt text-green-600 text-xl mt-1"></i>
                     <div>
                         <span class="block font-bold text-gray-800">Corporate HQ</span>
-                        <span class="text-gray-600 text-sm">Amar Nagar C / Naval Vihar,<br>Sirsi Road, Panchyawala,<br>Jaipur, Rajasthan - 302034</span>
+                        <span class="text-gray-600 text-sm">Plot No. 433, Amar Nagar-C, Gali No. 5.<br>Sirsi Road, Panchyawala,<br>Jaipur, Rajasthan - 302034</span>
                     </div>
                 </li>
                 <li class="flex items-start space-x-4">
                     <i class="fas fa-phone text-green-600 text-xl mt-1"></i>
                     <div>
                         <span class="block font-bold text-gray-800">B2B / Procurement Desk</span>
-                        <span class="text-gray-600 text-sm">+91 98XXX XXXXX</span>
+                        <span class="text-gray-600 text-sm">+91 89558 09485</span>
                     </div>
                 </li>
                 <li class="flex items-start space-x-4">
