--- a/index.html
+++ b/index.html
@@ -160,11 +160,11 @@
                 <ul class="space-y-3 text-sm">
                     <li class="flex items-start space-x-3">
                         <i class="fas fa-map-marker-alt text-green-500 mt-1"></i>
-                        <span>Amar Nagar C / Naval Vihar,<br>Sirsi Road, Panchyawala,<br>Jaipur, Rajasthan - 302034</span>
+                        <span>Plot No. 433, Amar Nagar-C, Gali No. 5.<br>Sirsi Road, Panchyawala,<br>Jaipur, Rajasthan - 302034</span>
                     </li>
                     <li class="flex items-center space-x-3">
                         <i class="fas fa-phone text-green-500"></i>
-                        <span>+91 98XXX XXXXX (Update Required)</span>
+                        <span>+91 89558 09485 </span>
                     </li>
                     <li class="flex items-center space-x-3">
                         <i class="fas fa-envelope text-green-500"></i>
