--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 </head>
 <body class="bg-gray-50 font-sans antialiased text-gray-800">
 
-    <div class="bg-blue-900 text-white text-xs md:text-sm py-2 px-4 flex justify-between items-center">
+    <div class="bg-blue-900 text-white text-xs md:text-sm py-2 px-4 flex justify-between items-center z-50 relative">
         <div class="flex items-center space-x-2">
             <i class="fas fa-shield-alt text-green-400"></i>
             <span class="font-semibold tracking-wider">GAZIREX CERTIFIED CORPORATE ENTITY</span>
@@ -19,17 +19,34 @@
         </div>
     </div>
 
-    <nav class="bg-white shadow-md py-4 px-6 md:px-12 flex justify-between items-center sticky top-0 z-40">
-        <div>
-            <h1 class="text-xl md:text-2xl font-bold text-green-800 tracking-tight">LANDSCAPE HORTICULTURE<br><span class="text-sm text-gray-500 font-medium">SERVICES PVT. LTD.</span></h1>
+    <nav class="bg-white shadow-md sticky top-0 z-40">
+        <div class="py-4 px-6 md:px-12 flex justify-between items-center">
+            <div>
+                <h1 class="text-xl md:text-2xl font-bold text-green-800 tracking-tight">LANDSCAPE HORTICULTURE<br><span class="text-sm text-gray-500 font-medium">SERVICES PVT. LTD.</span></h1>
+            </div>
+
+            <div class="hidden md:flex space-x-6 font-semibold text-gray-600 items-center">
+                <a href="index.html" class="hover:text-green-700 transition">Home</a>
+                <a href="profile.html" class="hover:text-green-700 transition">Corporate Profile</a>
+                <a href="capacities.html" class="hover:text-green-700 transition">Capacities</a>
+                <a href="contact.html" class="text-green-700 border-b-2 border-green-700 pb-1">Tender Inquiry</a>
+                <a href="contact.html" class="bg-green-700 hover:bg-green-800 text-white px-5 py-2 rounded font-bold shadow-md transition ml-4">Request Corporate Profile</a>
+            </div>
+
+            <div class="md:hidden flex items-center">
+                <button id="mobile-menu-button" class="text-green-800 focus:outline-none p-2">
+                    <i class="fas fa-bars text-2xl"></i>
+                </button>
+            </div>
         </div>
-        <div class="hidden md:flex space-x-6 font-semibold text-gray-600">
-            <a href="index.html" class="hover:text-green-700 transition">Home</a>
-            <a href="profile.html" class="hover:text-green-700 transition">Corporate Profile</a>
-            <a href="capacities.html" class="hover:text-green-700 transition">Capacities</a>
-            <a href="contact.html" class="text-green-700 border-b-2 border-green-700 pb-1">Tender Inquiry</a>
+
+        <div id="mobile-menu" class="hidden md:hidden bg-gray-50 border-t border-gray-200 px-6 py-4 shadow-inner flex-col space-y-4">
+            <a href="index.html" class="block text-gray-600 font-semibold border-b border-gray-200 pb-2">Home</a>
+            <a href="profile.html" class="block text-gray-600 font-semibold border-b border-gray-200 pb-2">Corporate Profile</a>
+            <a href="capacities.html" class="block text-gray-600 font-semibold border-b border-gray-200 pb-2">Capacities</a>
+            <a href="contact.html" class="block text-green-700 font-bold border-b border-gray-200 pb-2">Tender Inquiry</a>
+            <a href="contact.html" class="block text-center bg-green-700 hover:bg-green-800 text-white px-5 py-3 rounded font-bold shadow-md transition mt-2">Request Corporate Profile</a>
         </div>
-        <a href="contact.html" class="bg-green-700 hover:bg-green-800 text-white px-5 py-2 rounded font-bold shadow-md transition">Request Corporate Profile</a>
     </nav>
 
     <section class="py-16 px-6 md:px-12 max-w-7xl mx-auto flex flex-col md:flex-row gap-12">
@@ -41,14 +58,14 @@
                     <i class="fas fa-map-marker-alt text-green-600 text-xl mt-1"></i>
                     <div>
                         <span class="block font-bold text-gray-800">Corporate HQ</span>
-                        <span class="text-gray-600 text-sm">Amar Nagar C / Naval Vihar,<br>Sirsi Road, Panchyawala,<br>Jaipur, Rajasthan - 302034</span>
+                        <span class="text-gray-600 text-sm">Plot No. 433, Amar Nagar-C, Gali No. 5.<br>Sirsi Road, Panchyawala,<br>Jaipur, Rajasthan - 302034</span>
                     </div>
                 </li>
                 <li class="flex items-start space-x-4">
                     <i class="fas fa-phone text-green-600 text-xl mt-1"></i>
                     <div>
                         <span class="block font-bold text-gray-800">B2B / Procurement Desk</span>
-                        <span class="text-gray-600 text-sm">+91 98XXX XXXXX</span>
+                        <span class="text-gray-600 text-sm">+91 89558 09485</span>
                     </div>
                 </li>
                 <li class="flex items-start space-x-4">
@@ -101,5 +118,14 @@
             <span>Verified by <strong>Gazirex Web Agency</strong></span>
         </div>
     </footer>
+
+    <script>
+        const btn = document.getElementById('mobile-menu-button');
+        const menu = document.getElementById('mobile-menu');
+        btn.addEventListener('click', () => {
+            menu.classList.toggle('hidden');
+            menu.classList.toggle('flex');
+        });
+    </script>
 </body>
 </html>
