--- a/index.html
+++ b/index.html
@@ -32,17 +32,34 @@
         </div>
     </div>
 
-    <nav class="bg-white shadow-md py-4 px-6 md:px-12 flex justify-between items-center sticky top-0 z-40">
-        <div>
-            <h1 class="text-xl md:text-2xl font-bold text-green-800 tracking-tight">LANDSCAPE HORTICULTURE<br><span class="text-sm text-gray-500 font-medium">SERVICES PVT. LTD.</span></h1>
+    <nav class="bg-white shadow-md sticky top-0 z-40">
+        <div class="py-4 px-6 md:px-12 flex justify-between items-center">
+            <div>
+                <h1 class="text-xl md:text-2xl font-bold text-green-800 tracking-tight">LANDSCAPE HORTICULTURE<br><span class="text-sm text-gray-500 font-medium">SERVICES PVT. LTD.</span></h1>
+            </div>
+
+            <div class="hidden md:flex space-x-6 font-semibold text-gray-600 items-center">
+                <a href="index.html" class="text-green-700 border-b-2 border-green-700 pb-1">Home</a>
+                <a href="profile.html" class="hover:text-green-700 transition">Corporate Profile</a>
+                <a href="capacities.html" class="hover:text-green-700 transition">Capacities</a>
+                <a href="contact.html" class="hover:text-green-700 transition">Tender Inquiry</a>
+                <a href="contact.html" class="bg-green-700 hover:bg-green-800 text-white px-5 py-2 rounded font-bold shadow-md transition ml-4">Request Corporate Profile</a>
+            </div>
+
+            <div class="md:hidden flex items-center">
+                <button id="mobile-menu-button" class="text-green-800 focus:outline-none p-2">
+                    <i class="fas fa-bars text-2xl"></i>
+                </button>
+            </div>
         </div>
-        <div class="hidden md:flex space-x-6 font-semibold text-gray-600">
-            <a href="index.html" class="text-green-700 border-b-2 border-green-700 pb-1">Home</a>
-            <a href="profile.html" class="hover:text-green-700 transition">Corporate Profile</a>
-            <a href="capacities.html" class="hover:text-green-700 transition">Capacities</a>
-            <a href="contact.html" class="hover:text-green-700 transition">Tender Inquiry</a>
+
+        <div id="mobile-menu" class="hidden md:hidden bg-gray-50 border-t border-gray-200 px-6 py-4 shadow-inner flex-col space-y-4">
+            <a href="index.html" class="block text-green-700 font-bold border-b border-gray-200 pb-2">Home</a>
+            <a href="profile.html" class="block text-gray-600 font-semibold border-b border-gray-200 pb-2">Corporate Profile</a>
+            <a href="capacities.html" class="block text-gray-600 font-semibold border-b border-gray-200 pb-2">Capacities</a>
+            <a href="contact.html" class="block text-gray-600 font-semibold border-b border-gray-200 pb-2">Tender Inquiry</a>
+            <a href="contact.html" class="block text-center bg-green-700 hover:bg-green-800 text-white px-5 py-3 rounded font-bold shadow-md transition mt-2">Request Corporate Profile</a>
         </div>
-        <a href="contact.html" class="bg-green-700 hover:bg-green-800 text-white px-5 py-2 rounded font-bold shadow-md transition">Request Corporate Profile</a>
     </nav>
 
     <header class="hero-bg text-white py-32 md:py-40 px-6 md:px-12 text-center md:text-left flex flex-col items-center md:items-start">
@@ -160,11 +177,11 @@
                 <ul class="space-y-3 text-sm">
                     <li class="flex items-start space-x-3">
                         <i class="fas fa-map-marker-alt text-green-500 mt-1"></i>
-                        <span>Amar Nagar C / Naval Vihar,<br>Sirsi Road, Panchyawala,<br>Jaipur, Rajasthan - 302034</span>
+                        <span>Plot No. 433, Amar Nagar-C, Gali No. 5.<br>Sirsi Road, Panchyawala,<br>Jaipur, Rajasthan - 302034</span>
                     </li>
                     <li class="flex items-center space-x-3">
                         <i class="fas fa-phone text-green-500"></i>
-                        <span>+91 98XXX XXXXX (Update Required)</span>
+                        <span>+91 89558 09485 </span>
                     </li>
                     <li class="flex items-center space-x-3">
                         <i class="fas fa-envelope text-green-500"></i>
@@ -183,5 +200,13 @@
         </div>
     </footer>
 
+    <script>
+        const btn = document.getElementById('mobile-menu-button');
+        const menu = document.getElementById('mobile-menu');
+        btn.addEventListener('click', () => {
+            menu.classList.toggle('hidden');
+            menu.classList.toggle('flex');
+        });
+    </script>
 </body>
 </html>
